--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <li><a href="index.html">Module-27</a></li>
             <li><a href="index.html">Module-28</a></li>
             <li><a href="index.html">Module-29</a></li>
+            <li><a href="panda.html">Panda</a></li>
         </ul>
         </nav>
         <div class="banner">
