footer part of mod26 added

--- a/mod25.html
+++ b/mod25.html
@@ -16,7 +16,7 @@
         </div>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="#">Module-26</a></li>
+          <li><a href="mod26.html">Module-26</a></li>
           <li><a href="#">Module-27</a></li>
           <li><a href="#">Module-28</a></li>
           <li><a href="#">Module-29</a></li>
@@ -152,6 +152,36 @@
     <h3 class="video2">Q9: The display value of most DOM elements is either inline or block. (google it).<br>
        Ans: true</h3>
     </main>
+    
+      <footer>
+        <div class="part1">
+            <img src="images/Md-Nizam-uddin.jpeg">
+            <h1>Md Nizam Uddin</h1>
+            <h2>Batch 07</h2>
+            <h3></h3>
+        </div>
+        <div class="part2">
+            <h1>Assignment</h1>
+                <li><a href="#">Assignment-01</a></li>
+                <li><a href="#">Assignment-02</a></li>
+                <li><a href="#">Assignment-03</a></li>
+                <li><a href="#">Assignment-04</a></li>
+        </div>
+        <div class="part2">
+            <h1>My Projects</h1>
+            <li><a href="#">Digital Agency</li>
+            <li><a href="#">Digital Agency</li>
+            <li><a href="#">Digital Agency</li>
+            <li><a href="#">Digital Agency</li>
+        </div>
+        <div class="part2">
+            <h2 style="color:bisque;font-size:25px;">Milstone</h2>
+            <li><a href="#">Milstone-01</li>
+            <li><a href="#">Milstone-02</li>
+            <li><a href="#">Milstone-03</li>
+            <li><a href="index.html">Milstone-04</li>
+        </div>
+    </footer>
     
 
 
