mod28 file complete

--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="mod25.html">Module-25</a></li>
             <li><a href="mod26.html">Module-26</a></li>
-            <li><a href="index.html">Module-27</a></li>
+            <li><a href="/mod27/mod27.html">Module-27</a></li>
             <li><a href="index.html">Module-28</a></li>
             <li><a href="index.html">Module-29</a></li>
             <li><a href="panda.html">Panda</a></li>
+            <li><a href="practic/practice.html">Practice</a></li>
         </ul>
         </nav>
         <div class="banner">
