--- a/mod25.html
+++ b/mod25.html
@@ -17,7 +17,7 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="mod26.html">Module-26</a></li>
-          <li><a href="#">Module-27</a></li>
+          <li><a href="mod27/mod27.html">Module-27</a></li>
           <li><a href="#">Module-28</a></li>
           <li><a href="#">Module-29</a></li>
           <li class="dropdown">
