--- a/mod26.html
+++ b/mod26.html
@@ -16,7 +16,7 @@
             <ul>
               <li><a href="index.html">Home</a></li>
               <li><a href="mod25.html">Module-25</a></li>
-              <li><a href="#">Module-27</a></li>
+              <li><a href="mod27/mod27.html">Module-27</a></li>
               <li><a href="#">Module-28</a></li>
               <li><a href="#">Module-29</a></li>
               <li class="dropdown">
