--- a/panda.html
+++ b/panda.html
@@ -43,6 +43,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="mod26.html">Module-26</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="mod27/mod27.html">Module-27</a>
+                        </li>
 
                     </ul>
 
