some projects code added

--- a/mod25.html
+++ b/mod25.html
@@ -18,8 +18,8 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="mod26.html">Module-26</a></li>
           <li><a href="mod27/mod27.html">Module-27</a></li>
-          <li><a href="#">Module-28</a></li>
-          <li><a href="#">Module-29</a></li>
+          <li><a href="mod28/mod28.html">Module-28</a></li>
+          <li><a href="mod29/mod29.html">Module-29</a></li>
           <li class="dropdown">
             <a href="#">Milstone</a>
             <ul class="dropdown-content">
@@ -29,7 +29,7 @@
               <li><a href="#">Milstone 04</a></li>
             </ul>
           </li>
-          <button class="btn tracking-in-expand">Download My CV</button>
+          
         </ul>
      
       </nav>
