--- a/mod28/mod28.html
+++ b/mod28/mod28.html
@@ -136,9 +136,9 @@
         Ans: The element on which the event happened</h2>
         <h2 class="text-4xl text-center text-rose-400">Q10: How will you get the $ symbol of the tag <h1 >$00</h1> (think about it)<br>
         Ans: By adding a span for $ and setting an id</h2>
-    </section>
+    </section><br>
+</main>
 
-    </main>
     <script src="js/deposit.js"></script>
     <script src="js/withdraw.js"></script>
 </body>
