--- a/mod26.html
+++ b/mod26.html
@@ -17,8 +17,8 @@
               <li><a href="index.html">Home</a></li>
               <li><a href="mod25.html">Module-25</a></li>
               <li><a href="mod27/mod27.html">Module-27</a></li>
-              <li><a href="#">Module-28</a></li>
-              <li><a href="#">Module-29</a></li>
+              <li><a href="mod28/mod28.html">Module-28</a></li>
+              <li><a href="mod29/mod29.html">Module-29</a></li>
               <li class="dropdown">
                 <a href="#">Milstone</a>
                 <ul class="dropdown-content">
