--- a/practic/practice.html
+++ b/practic/practice.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Milstone 05: Practice</title>
+    <link rel="shortcut icon" href="images/favicon2.png" type="image/x-icon">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -14,6 +15,71 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <header>
+      <nav class="navbar navbar-expand-lg bg-black container-fluid">
+          <div class="d-flex navbar-brand text-warning rounded-pill bg-black">
+              <img class="img-fluid" src="images/Md-Nizam-uddin.jpeg" width="60" height="24">
+              <h4>Milstone-5<br>Practice</h4>
+          </div>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent"> 
+            <ul class="navbar-nav mx-auto mb-2 mb-lg-0 fw-bold ">
+              <li class="nav-item"><a class="nav-link text-white" href="/index.html">Home</a></li>
+              <li class="nav-item"><a class="nav-link text-white" href="../mod25.html">Module-25</a></li>
+              <li class="nav-item"><a class="nav-link text-white" href="../mod26.html">Module-26</a></li>
+              <li class="nav-item"><a class="nav-link text-white" href="../mod27/mod27.html">Module-27</a></li>
+              <li class="nav-item"><a class="nav-link text-white" href="../mod28/mod28.html">Module-28</a></li>
+              <li class="nav-item"><a class="nav-link text-white" href="../mod29.html">Module-29</a></li>
+              <li class="nav-item"><a class="nav-link text-white" href="mod23.html">Module-23</a></li>
+              <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Milstone
+                  </a>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="#">Milstone-01</a></li>
+                    <li><a class="dropdown-item" href="#">Milstone-02</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item" href="index.html">Milstone-03</a></li>
+                    <li><a class="dropdown-item" href="index.html">Milstone-04</a></li>
+                  </ul>
+                </li>
+          </ul>
+          <button class="btn bg-warning text-dark me-5" data-bs-toggle="modal" data-bs-target="#exampleModal" type="submit">Modal</button>
+          <!-- Modal -->
+          <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+          <div class="modal-content">
+              <div class="modal-header">
+              <h1 class="modal-title fs-5" id="exampleModalLabel">Assalamualaikum!</h1>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+               This page made by Bootstrap.
+              </div>
+              <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-success">Change</button>
+              </div>
+          </div>
+          </div>
+          </div>
+      </div>
+      </nav>
+      <div class="d-flex justify-content-around align-items-center bg-black text-white">
+          <div>
+              <h1>Assalamualaikum!</h1>
+              <h1 class="display-1 fw-bold text-warning">I am Nizam</h1>
+              <h4>Student of Batch-7</h4>
+          </div>
+          <div>
+              <img class="rounded-circle" src="images/nizam2.png" alt="">
+          </div>
+      </div>
+      <marquee class="fw-bold fs-3 bg-yellow-500">WELCOME TO MILSTONE 05 PRACTICE SECTION, I AM NIZAM STUDENT OF BATCH 07</marquee>
+  </header><br>
+  <main>
     <div>
       <h1 class="text-center fw-bold text-info">
         My Shopping Budget : <span> 4000</span>
@@ -121,9 +187,48 @@
       <p id="p-3">home-3</p>
       <p id="p-4">home-4</p>
     </div>
+  </section><br><br>
+  <section>
+    <section class="mt-8 bg-black">
+      <div class="row roe-cols-3 gap-4 w-10 mx-auto">
+          <div class="bg-yellow-400 p-8 rounded-lg col">
+              <h4 class="text-4xl font-bold tracking-in-expand">Deposit</h4>
+              <h2 class="text-5xl font-bold">$<span id="deposit-total">00</span></h2>
+          </div>
+          <div class="bg-rose-900 text-white p-8 rounded-lg col">
+              <h4 class="text-4xl tracking-in-expand font-bold">Withdraw</h4>
+              <h2 class="text-5xl font-bold">$<span id="withdraw-total">00</span></h2>
+          </div>
+          <div class="bg-violet-900 text-white p-8 rounded-lg col">
+              <h4 class="text-4xl tracking-in-expand font-bold">Balance</h4>
+              <h2 class="text-5xl font-bold">$<span id="balance-total">1240</span></h2>
+          </div>
+          
+      </div>
   </section>
+  <!-- Deposit and withdraw section -->
+  <section class="mt-8 w-3/4 mx-auto bg-black">
+      <!-- div.grid.grid-cols-2.gap-4 -->
+      <div class="row row-cols-2 gap-4 inline">
+          <div class="bg-success px-2 py-4 rounded-lg cols-3">
+              <h2 class="text-5xl text-white mb-4 tracking-in-expand">Your Deposit</h2>
+              <input id="deposit-field" class="w-3/4 px-4 py-3 rounded-lg" type="text" placeholder="$ Amount you want to deposit">
+              <button id="btn-deposit" class="bg-warning px-6 py-2 mt-3 text-black hover:bg-rose-900 hover:text-white font-bold rounded-lg">Deposit</button>
+          </div>
+          <div class="bg-primary p-4 cols-3">
+              <h2 class="text-5xl text-white mb-4 tracking-in-expand">Your Withdraw</h2>
+              <input id="withdraw-field" class="w-3/4 px-4 py-3 rounded-lg" type="text" placeholder="$ Amount you want to withdraw">
+              <button id="btn-withdraw" class="bg-success text-white px-6 py-2 mt-3 hover:bg-warning hover:text-black font-bold rounded-lg">Withdraw</button>
+          </div>
+      </div>
+  </section><br><br>
+
+  </section>
+</main>
       <script src="js/budget.js"></script>
       <script src="js/practice.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+
     </body>
   </html>
 
