--- a/panda.html
+++ b/panda.html
@@ -156,7 +156,7 @@
             <h2>Shoes</h2>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                 <div class="col">
-                    <div class="card border border-0 shadow-lg h-100">
+                    <div class="card border-0 shadow-lg h-100">
                         <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Supply 350</h5>
@@ -170,7 +170,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card border border-0 shadow-lg h-100">
+                    <div class="card border-0 shadow-lg h-100">
                         <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Nike 360</h5>
@@ -184,7 +184,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card border border-0 shadow-lg h-100">
+                    <div class="card  border-0 shadow-lg h-100">
                         <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Red Airmax</h5>
@@ -206,7 +206,7 @@
             <h2>Backpack</h2>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                 <div class="col">
-                    <div class="card border border-0 shadow-lg h-100">
+                    <div class="card border-0 shadow-lg h-100">
                         <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Red Laltu Bag</h5>
@@ -220,7 +220,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card border border-0 shadow-lg h-100">
+                    <div class="card border-0 shadow-lg h-100">
                         <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Nike 360</h5>
@@ -234,7 +234,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card border border-0 shadow-lg h-100">
+                    <div class="card border-0 shadow-lg h-100">
                         <img id="myImage" src="images/bags/bag-3.png" onmouseover="changeImage()" onmouseout="revertImage()" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Red Airmax</h5>
