some update of mod28

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <li><a href="mod25.html">Module-25</a></li>
             <li><a href="mod26.html">Module-26</a></li>
             <li><a href="/mod27/mod27.html">Module-27</a></li>
-            <li><a href="index.html">Module-28</a></li>
-            <li><a href="index.html">Module-29</a></li>
+            <li><a href="mod28/mod28.html">Module-28</a></li>
+            <li><a href="mod29/mod29.html">Module-29</a></li>
             <li><a href="panda.html">Panda</a></li>
             <li><a href="practic/practice.html">Practice</a></li>
         </ul>
