--- a/mod28/mod28.html
+++ b/mod28/mod28.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Milstone-05: Module-28</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@2.51.3/dist/full.css" rel="stylesheet" type="text/css" />
     <link rel="shortcut icon" href="/images/favicon.png" type="image/x-icon">
     <style>
         .tracking-in-expand {
@@ -73,7 +74,7 @@
         </div>
     </header>
     <main class="bg-black">
-        <marquee class="text-5xl bg-slate-900 text-rose-700">Assalamualaikum! Welcome to Milstone-05 Module-27 Practice Section. I am Nizam, Student of Batch-07. This page created by using tailwindcss.</marquee>
+        <marquee class="text-5xl bg-slate-900 text-rose-700">Assalamualaikum! Welcome to Milstone-05 Module-28 Practice Section. I am Nizam, Student of Batch-07. This page created by using tailwindcss.</marquee>
     <h1 class="text-7xl text-center text-slate-900 bg-yellow-300 tracking-in-expand">Module-28 Practice</h1><br>
     <section>
         <h1 class="text-7xl text-rose-900 text-center font-bold mt-10">WELCOME TO <span class="font-bold text-violet-600 tracking-in-expand">AMAR Bank</span></h1>
@@ -134,10 +135,78 @@
         Ans: All the above</h2>
         <h2 class="text-4xl text-center text-green-400">Q9: What will event.target refers to inside the event listener?<br>
         Ans: The element on which the event happened</h2>
-        <h2 class="text-4xl text-center text-rose-400">Q10: How will you get the $ symbol of the tag <h1 >$00</h1> (think about it)<br>
+        <h2 class="text-4xl text-center text-rose-400">Q10: How will you get the $ symbol of the tag h1 $00  (think about it)<br>
         Ans: By adding a span for $ and setting an id</h2>
     </section><br>
 </main>
+<footer class="footer grid-rows-1 p-10 bg-slate-800 text-neutral-content">
+    <div>
+        <img class="img-fluid w-[200px] rounded-full" src="../images/nizam2.png">
+        <h1 class="text-3xl text-yellow-300">Md Nizam Uddin</h1>
+        <h1>Batch 07</h1>
+    </div>
+    <div>
+      <span class="footer-title text-2xl text-yellow-300">My Projects</span> 
+      <a class="link link-hover" href="https://freelancernizamc.github.io/digital-agency/">Digital Agency</a> 
+      <a class="link link-hover" href="https://freelancernizamc.github.io/donate-today/">Donate Today</a> 
+      <a class="link link-hover" href="https://freelancernizamc.github.io/convension-center/">Convension Center</a> 
+      <a class="link link-hover" href="https://reveal-bs.netlify.app/">Reveal</a>
+      <a class="link link-hover" href="https://freelancernizamc.github.io/jakanaka-project/">Jakanaka Projects</a>
+      <a class="link link-hover" href="https://freelancernizamc.github.io/penguins-fashion/">Penguine Fashion</a>
+      <a class="link link-hover" href="https://freelancernizamc.github.io/influencer-products/">Influencer Products</a>
+    </div> 
+    <div>
+      <span class="footer-title text-2xl text-yellow-300">Milstone</span> 
+      <a class="link link-hover" href="https://freelancernizamc.github.io/milstone-01/">Milstone 01</a> 
+      <a class="link link-hover" href="https://milstone-2.netlify.app/">Milstone 02</a> 
+      <a class="link link-hover" href="https://freelancernizamc.github.io/milstone-03/index.html">Milstone 03</a> 
+      <a class="link link-hover" href="https://freelancernizamc.github.io/milstone-04/">Milstone 04</a>
+      <a class="link link-hover" href="https://milstone-05.netlify.app/">Milstone 05</a>
+      <a class="link link-hover" href="https://freelancernizamc.github.io/milstone-06/">Milstone 06</a>
+      <a class="link link-hover" href="https://freelancernizamc.github.io/milstone-07/">Milstone 07</a>
+    </div> 
+    <div>
+      <span class="footer-title text-2xl text-yellow-300">Module</span> 
+      <a class="link link-hover" href="mod39.html">Module 39</a> 
+      <a class="link link-hover" href="mod40.html">Module 40</a> 
+      <a class="link link-hover" href="mod41.html">Module 41</a>
+      <a class="link link-hover" href="mod42.html">Module 42</a>
+      <a class="link link-hover" href="mod43.html">Module 43</a>
+      <a class="link link-hover" href="mod44.html">Module 44</a>
+      <a class="link link-hover" href="mod45.html">Module 45</a>
+    </div> 
+    <div>
+      <span class="footer-title text-2xl text-yellow-300">Assignment</span> 
+      <a class="link link-hover" href="https://freelancernizamc.github.io/assignment-1/">Assignment 01</a> 
+      <a class="link link-hover" href="https://freelancernizamc.github.io/assignment-2/">Assignment 02</a> 
+      <a class="link link-hover" href="https://assignment-03-bynizam.netlify.app/">Assignment 03</a> 
+      <a class="link link-hover" href="">Assignment 04</a>
+      <a class="link link-hover" href="https://assignment-5by-nizam.netlify.app/">Assignment 05</a>
+      <a class="link link-hover" href="https://assignment-06-bynizam.netlify.app/">Assignment 06</a>
+      <a class="link link-hover" href="">Assignment 07</a>
+    </div> 
+    <div>
+      <span class="footer-title text-2xl text-yellow-300">My Projects</span> 
+      <a class="link link-hover">Animated Website</a> 
+      <a class="link link-hover">Bootstrap Website</a> 
+      <a class="link link-hover">Nice Theme</a> 
+      <a class="link link-hover">Responsive Website</a>
+      <a class="link link-hover">Stylish Theme</a>
+      <a class="link link-hover">My Portfolio</a>
+      <a class="link link-hover">Bikerz Zone</a>
+    </div> 
+    <div>
+      <span class="footer-title text-2xl text-yellow-300">My Projects</span> 
+      <a class="link link-hover">My Shopping Cart</a> 
+      <a class="link link-hover" href="https://tea-house-by-n.netlify.app/">Tea House</a> 
+      <a class="link link-hover">Projects with API</a> 
+      <a class="link link-hover">My Bank</a>
+      <a class="link link-hover">Mobile Hunter</a>
+      <a class="link link-hover">News World</a>
+      <a class="link link-hover">Android</a>
+    </div>
+  </footer>
+  <h6 class="text-center bg-neutral text-neutral-content">Copyright &copy;2023 Allright Reserved</h6>
 
     <script src="js/deposit.js"></script>
     <script src="js/withdraw.js"></script>
