update code for practice

--- a/practic/practice.html
+++ b/practic/practice.html
@@ -249,7 +249,7 @@
     <a class="link link-hover" href="https://myshoppingcart2.netlify.app/">My Shopping Cart</a> 
     <a class="link link-hover" href="https://tea-house-by-n.netlify.app/">Tea House</a> 
     <a class="link link-hover" href="https://freelancernizamc.github.io/practice-m6/">Projects with API</a> 
-    <a class="link link-hover">My Bank</a>
+    <a class="link link-hover" href="https://milstone-05.netlify.app/mod28/mod28.html">AMAR Bank</a>
     <a class="link link-hover" href="https://freelancernizamc.github.io/milstone-06/mod35.html">Mobile Hunter</a>
     <a class="link link-hover" href="https://freelancernizamc.github.io/sports-db/">Sports DB</a>
     <a class="link link-hover" href="https://freelancernizamc.github.io/milstone-06/mod34.html">Countries API</a>
